# starship

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  Makefile  README-dev.md  README.md  WORKSPACE  demo.md  deps.bzl  go.mod  go.sum  go.work  go.work.sum  index.html  index.yaml  lerna.json  package.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  chain-docker.yaml  docker.yaml  docs.yaml  e2e-tests.yaml  lint-check.yaml  lint-client.yml  mkdocs.yaml  pr-e2e-tests.yaml  pr-tests.yaml  release.yaml  run-client-tests.yml  run-tests.yml  scripts-tests.yaml  smoke-tests.yaml  starship-docker.yaml  temp-docker.yaml
.ijwb/: .bazelproject
charts/devnet/: Chart.yaml  Makefile  defaults.yaml  values.schema.json  values.yaml
ci/cli/: CHANGELOG.md  README.md  package.json
ci/client/: CHANGELOG.md  README.md  devnet  package.json
ci/utils/: README.md  package.json
clients/go/client/: BUILD.bazel  chain.go  config.go  go.mod  go.sum  runner.go
clients/js/: .eslintignore  .gitignore  CHANGELOG.md  README.md  lerna.json  package.json
cmd/starship/: BUILD.bazel  Makefile  binaries.go  charts.go  config.go  connect.go  const.go  go.mod  go.sum  main.go  model.go  root.go
collector/: BUILD.bazel  Dockerfile  Makefile  app.go  config.go  const.go  error.go  fileserver.go  go.mod  go.sum  handler.go  model.go
collector/collector/: collector.pb.go  service.pb.go  service_grpc.pb.go
docker/: Makefile
docker/base/: Dockerfile
docker/builder/: BUILD.bazel  Dockerfile
docker/chains/: Dockerfile  Dockerfile.evmos  Dockerfile.injective  Dockerfile.union  build-docker-chains.sh  build-docker.sh  chains.yaml  versions.yaml
docker/explorer/: Dockerfile
docker/exposer/: Dockerfile  exposer.go
docker/juno/: Dockerfile
docker/osmosis/: Dockerfile
docker/persistencecore/: Dockerfile
docker/runner/: Dockerfile
docker/wasmd/: Dockerfile
docs/: .gitignore  .markdownlint.json  CNAME  mkdocs.yml  package-lock.json  package.json  theme.config.js
docs/config/: seo.js  site.js
docs/docs/: faq.md
docs/overrides/: home.html
docs/pages/: _meta.json  get-started.mdx  index.mdx
docs/seo/: prepare.sh
examples/: Makefile
examples/chain/: custom-values.yaml  package-lock.json  package.json
examples/cosmos-simapp-multi/: Makefile
examples/getting-started/: Makefile  README.md
examples/getting-started-bash/: Makefile  README.md
examples/getting-started-js/: Makefile  README.md
examples/injective/: Makefile  README.md
examples/injective-cluster/: Dockerfile  Makefile
examples/mesh-security/: DEVNET.md  config-dev.yaml  config.yaml  custom-values.yaml  local-values.yaml
examples/multi-chain/: Makefile  config.yaml
examples/neutron/: Makefile  README.md  package.json
examples/nymlab-upgrade-test/: Makefile  bank.go  config.yaml  go.mod  go.sum  ibc.go  setup_test.go  suite.go  upgrade.go
examples/osmojs/: Makefile  package-lock.json  package.json
examples/upgrade-test/: Makefile  chain.go  config.go  config.yaml  go.mod  go.sum  setup_test.go  suite.go  test_setup.go  upgrade_test.go
examples/upgrade-testing/: Makefile  custom-values.yaml  custom-vaules.yaml  post_upgrade.sh  pre_upgrade.sh  setup_keys.sh  upgrade.sh
exposer/: BUILD.bazel  Dockerfile  Makefile  app.go  config.go  const.go  error.go  exposer.go  go.mod  go.sum  handler.go  handler_relayer.go  main.go  model.go  types.go
exposer/exposer/: BUILD.bazel  genesis.pb.go  mnemonic.pb.go  node.pb.go  service.pb.go  service.pb.gw.go  service_grpc.pb.go
exposer/testdata/: priv_validator_key.json
faucet/: Dockerfile  Makefile  app.go  coin.go  config.go  const.go  distributor.go  go.mod  go.sum  handler.go  main.go  model.go  utils.go
faucet/faucet/: service.pb.go  service.pb.gw.go  service_grpc.pb.go  status.pb.go
js/starshipjs/: CHANGELOG.md  README.md  package.json
kubeshuttle/devnet/: Makefile  values.yaml
local-chain-registry/: BUILD.bazel  Dockerfile  Makefile  app.go  const.go  go.mod  handler.go  main.go  models.go  types.go
proto/: Makefile  buf.gen.yaml  buf.yaml
proto/exposer/: BUILD.bazel  genesis.proto  mnemonic.proto  node.proto  service.proto
proto/registry/: BUILD.bazel  chain.proto  ibc.proto  mnemonic.proto  service.proto
registry/: BUILD.bazel  Dockerfile  Makefile  app.go  chain.go  config.go  const.go  error.go  go.mod  go.sum  handler.go  main.go  model.go
registry/registry/: BUILD.bazel  chain.pb.go  ibc.pb.go  mnemonic.pb.go  service.pb.go  service.pb.gw.go  service_grpc.pb.go
registry/testdata/_IBC/: akash-osmosis.json  cosmoshub-osmosis.json
registry/testdata/cosmoshub/: assetlist.json
registry/testdata/osmosis-1/: chain.json
scripts/: build-docker.sh  common.sh  cyclops-ui.sh  dev-setup.sh  install.sh  port-forward.sh  update-go-pbs.sh
setup/: .prettierignore  README.md  package-lock.json  package.json
starship/: go.work  go.work.sum
tests/: BUILD.bazel  Makefile  client_test.go  config.go  config.yaml  e2e_test.go  exposer_test.go  go.mod  go.sum  registry_test.go
tests/configs/: build-chain.yaml  multi-validator.yaml  one-chain.yaml  one-custom-chain.yaml  two-chain-gorelayer.yaml  two-chain.yaml
tests/e2e/: BUILD.bazel  Makefile  address.go  config.go  e2e_test.go  exposer_test.go  faucet_test.go  go.mod  go.sum  registry_test.go
tests/e2e/configs/: agoric.yaml  build-chain.yaml  evmos.yaml  ics.yaml  injective.yaml  multi-relayer.yaml  multi-validator-simapp.yaml  multi-validator-starship-faucet.yaml  multi-validator.yaml  neutron.yaml  one-chain-cometmock.yaml  one-chain-commet-mock.yaml  one-chain-custom-scripts.yaml  one-chain-starship-faucet.yaml  one-chain.yaml  one-custom-chain.yaml  simapp.yaml  three-chain.yaml  two-chain-cometmock.yaml  two-chain-gorelayer.yaml  two-chain-monitoring.yaml  two-chain.yaml
tests/e2e/configs/scripts/: transfer-custom-tokens.sh  update-custom-config.sh  update-custom-genesis.sh
tests/smoke/ci/: multi-validator.yaml  simapp.yaml
tests/support/: Makefile
testsetup/: Makefile  config.yaml
tools/: go.mod  go.sum  main.go
(+454 files in other folders)
