load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "collector_lib",
    srcs = [
        "app.go",
        "config.go",
        "const.go",
        "error.go",
        "fileserver.go",
        "handler.go",
        "main.go",
        "model.go",
    ],
    importpath = "github.com/anmol1696/shuttle/collector",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_go_chi_chi//middleware:go_default_library",
        "@com_github_go_chi_render//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "collector",
    embed = [":collector_lib"],
    visibility = ["//visibility:public"],
)
