load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "app.go",
        "config.go",
        "const.go",
        "error.go",
        "fileserver.go",
        "handler.go",
        "main.go",
        "model.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi//:chi",
        "@com_github_go_chi_chi//middleware",
        "@com_github_go_chi_render//:render",
        "@com_github_urfave_cli//:cli",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "collector",
    embed = [":collector_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "collector_lib",
    srcs = [
        "app.go",
        "config.go",
        "const.go",
        "error.go",
        "fileserver.go",
        "handler.go",
        "main.go",
        "model.go",
    ],
    importpath = "github.com/Anmol1696/starship/collector",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi//:chi",
        "@com_github_go_chi_chi//middleware",
        "@com_github_go_chi_render//:render",
        "@com_github_urfave_cli//:cli",
        "@org_uber_go_zap//:zap",
    ],
)
