load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "local-chain-registry_lib",
    srcs = [
        "app.go",
        "config.go",
        "const.go",
        "error.go",
        "handler.go",
        "main.go",
        "models.go",
    ],
    importpath = "github.com/anmol1696/shuttle/local-chain-registry",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_go_chi_chi//middleware:go_default_library",
        "@com_github_go_chi_render//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "local-chain-registry",
    embed = [":local-chain-registry_lib"],
    visibility = ["//visibility:public"],
)
