load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image", "container_push")

go_library(
    name = "tests_lib",
    srcs = [
        "config.go",
    ],
    importpath = "github.com/cosmology-tech/starship/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/registry:registry_go_proto",  # keep
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "tests",
    srcs = [
        "e2e_test.go",
        "registry_test.go",
    ],
    embed = [":tests_lib"]
)