load("@io_bazel_rules_go//go:def.bzl", "go_cross_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image", "container_push")

go_library(
    name = "tests_lib",
    srcs = [
        "config.go"
    ],
    importpath = "github.com/cosmology-tech/starship/tests",
    visibility = ["//visibility:public"],
)

go_test(
    name = "tests",
    srcs = [
        "e2e_test.go",
        "registry_test.go",
        "exposer_test.go",
    ],
    embed = [":tests_lib"],
    deps = [
        "//proto/registry:registry_go_proto",
        "//proto/exposer:exposer_go_proto",
        "@com_github_json_iterator_go//:go",
        "@com_github_stretchr_testify//suite",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_uber_go_zap//:zap",
    ],
    data = [
        ":config.yaml"
    ],
    env = {
        "GO_TEST_WRAP_TESTV": "1",
    },
)
