load("@io_bazel_rules_go//go:def.bzl", "go_cross_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image", "container_push")

go_library(
    name = "tests_lib",
    srcs = ["config.go"],
    importpath = "github.com/cosmology-tech/starship/tests",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "configfiles",
    srcs = glob(["configs/*.yaml"]),
    visibility = ["//visibility:public"],
)

go_test(
    name = "tests",
    srcs = [
        "e2e_test.go",
        "exposer_test.go",
        "registry_test.go",
        "client_test.go",
    ],
    data = [
        ":configfiles",
        ".kubeconfig",
    ],
    embed = [":tests_lib"],
    env = {
        "GO_TEST_WRAP_TESTV": "1",
        "KUBECONFIG": "./.kubeconfig",
    },
    deps = [
        "//proto/exposer:exposer_go_proto",
        "//proto/registry:registry_go_proto",
        "//clients/go/client:lib",
        "@com_github_golang_protobuf//jsonpb",
        "@com_github_golang_protobuf//proto",
        "@com_github_stretchr_testify//suite",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_tendermint_tendermint//rpc/core/types",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_uber_go_zap//:zap",
    ],
)
