load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "starship_lib",
    srcs = [
        "charts.go",
        "main.go",
    ],
    data = [
        "//tests:configfiles",
    ],
    importpath = "github.com/cosmology-tech/starship/cmd/starship",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofrs_flock//:flock",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_uber_go_zap//:zap",
        "@sh_helm_helm_v3//pkg/action",
        "@sh_helm_helm_v3//pkg/chart/loader",
        "@sh_helm_helm_v3//pkg/cli",
        "@sh_helm_helm_v3//pkg/cli/values",
        "@sh_helm_helm_v3//pkg/getter",
        "@sh_helm_helm_v3//pkg/kube",
        "@sh_helm_helm_v3//pkg/repo",
    ],
)

go_binary(
    name = "starship",
    embed = [":starship_lib"],
    static = "on",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "starship_arm64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_arm64",
    target = ":starship",
)
