load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "registry",
    srcs = [
        "chain.pb.go",
        "service.pb.go",
        "service.pb.gw.go",
        "service_grpc.pb.go",
    ],
    importpath = "github.com/Anmol1696/starship/registry/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//build/bin/external/com_google_protobuf/_virtual_imports/any_proto/google/protobuf:anypb",
        "//build/bin/external/com_google_protobuf/_virtual_imports/descriptor_proto/google/protobuf:descriptorpb",
        "//build/bin/external/com_google_protobuf/_virtual_imports/empty_proto/google/protobuf:emptypb",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
