load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "chain.go",
        "config.go",
    ],
    importpath = "github.com/cosmology-tech/starship/clients/go/client",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/registry:registry_go_proto",  # keep
        "@com_github_cosmos_cosmos_sdk//client/tx",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_go_bip39//:go-bip39",
        "@com_github_golang_protobuf//jsonpb",
        "@com_github_strangelove_ventures_lens//client",
        "@com_github_tendermint_tendermint//rpc/core/types",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "client",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
